--- a/Sales Analytics  Project.ipynb
+++ b/Sales Analytics  Project.ipynb
@@ -1909,6 +1909,7 @@
     }
    ],
    "source": [
+    "# Referenced: https://stackoverflow.com/questions/14762181/adding-a-y-axis-label-to-secondary-y-axis-in-matplotlib\n",
     "prices=all_data.groupby('Product').mean()['Price Each']\n",
     "\n",
     "fig, ax1 = plt.subplots()\n",
